# OneCapture

./: .env.example  .gitignore  01_hub.html  02_eclaim.html  02_eclaim_live.html  05_erpsync.html  CarbonNext_Integration_Requirements.txt  OneCapture_Startup_Requirements_v1.2.docx  README.md  alembic.ini  eClaim_Production_Readiness_Audit.md  eclaim_claim_redesign_spec.md  eclaim_postgres_spec.md  multitenant_spine_spec.md  pyproject.toml
_docx_extract/docProps/: core.xml
_docx_extract/word/: document.xml  footer1.xml  styles.xml
config/clients/: abc_manufacturing.yaml
config/factors/: my_2026.yaml
config/ownership/: abc_manufacturing.yaml
config/presets/: abc_manufacturing.yaml
config/rules/: abc_manufacturing.v7.yaml
scripts/: gen_synthetic.py  install-autostart.ps1  run_import.py  seed.py  seed_uat.py  serve.ps1
src/core/: __init__.py  audit.py  carbon.py  release.py
src/eclaim/: __init__.py  config.py  imaging.py  maps.py  repositories.py  tenancy.py
src/eclaim/alembic/: env.py
src/eclaim/api/: __init__.py  app.py  deps.py  (+3 more)
src/erpsync/: __init__.py  cli.py  pipeline.py
tests/: conftest.py  test_core_shared.py  test_dedup_crosschannel.py  test_emissions.py  test_idempotency.py  test_ingest_validation.py  test_pipeline_e2e.py  test_quantity_resolution.py  test_release_hash.py  test_rules_precedence.py
tests/eclaim/: conftest.py  test_admin_users.py  test_ap.py  test_app_path_default_deny.py  test_approval_matrix.py  test_approvals_inbox.py  test_async_ingestion.py  test_attestation.py  test_audit_coding.py  test_carbon_leaf.py  test_claim_line_model.py  test_claims_export.py  test_classify_unit.py  test_correctness_fixes.py  test_csrf.py  test_decompression_bomb.py  test_duplicates.py  test_eclaim_flow.py  test_erp.py  test_erpsync_release.py  test_erpsync_review.py  test_erpsync_staging.py  test_erpsync_web.py  test_evidence.py  test_fx.py  test_handoff_doc_ref.py  test_heic_upload.py  test_intake_routing.py  test_ledger_immutability.py  test_login_ratelimit.py  test_maps_request.py  test_merchant_map.py  test_merge_split.py  test_mileage.py  test_mileage_audit_fixes.py  test_nav_smoke.py  test_ocr_boxes.py  test_payables.py  test_pdf_ingest.py  test_posting_date.py  (+23 more)
(+133 files in other folders)
