[project]
name = "onecapture"
version = "0.2.0"
description = "OneCapture — carbon capture platform (ERP Sync + e-Claim modules over shared core)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "openpyxl>=3.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# e-Claim module: FastAPI + Postgres + Anthropic vision OCR.
eclaim = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "fpdf2>=2.7",  # evidence-pack PDF rendering (pure Python, no system libs)
    "pypdfium2>=4.30",  # ingest: render uploaded PDF pages to images (self-contained, no Poppler)
    "pillow>=10.0",  # ingest: encode/stitch rendered PDF pages
    "pillow-heif>=0.16",  # ingest: transcode iPhone HEIC/HEIF receipts to JPEG
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
erpsync-import = "erpsync.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
